// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserPage> when the user has failed to load should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <ul
      aria-label="navigation"
    >
      <li
        aria-label="navigation-item"
      >
        Nav Item @ /nav-item
      </li>
      <li>
        Dropdown
        <ul>
          <li
            aria-label="navigation-item"
          >
            Dropdown Item @ /dropdown-item
          </li>
        </ul>
      </li>
    </ul>
    <h1>
      Current User
    </h1>
    <div
      class="relative"
    >
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            <span
              class="text-muted"
            >
              (none)
            </span>
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Email
          </dt>
          <dd
            class="data-list-value"
          >
            <span
              class="text-muted"
            >
              (none)
            </span>
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Role
          </dt>
          <dd
            class="data-list-value"
          >
            <span
              class="text-muted"
            >
              (none)
            </span>
          </dd>
        </div>
      </dl>
      <h2
        class="mb-2"
      >
        Security
      </h2>
      <a>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-user-lock pr-1"
          data-icon="user-lock"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 640 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M592 288H576V212.7c0-41.84-30.03-80.04-71.66-84.27C456.5 123.6 416 161.1 416 208V288h-16C373.6 288 352 309.6 352 336v128c0 26.4 21.6 48 48 48h192c26.4 0 48-21.6 48-48v-128C640 309.6 618.4 288 592 288zM496 432c-17.62 0-32-14.38-32-32s14.38-32 32-32s32 14.38 32 32S513.6 432 496 432zM528 288h-64V208c0-17.62 14.38-32 32-32s32 14.38 32 32V288zM224 256c70.7 0 128-57.31 128-128S294.7 0 224 0C153.3 0 96 57.31 96 128S153.3 256 224 256zM320 336c0-8.672 1.738-16.87 4.303-24.7C308.6 306.6 291.9 304 274.7 304H173.3C77.61 304 0 381.7 0 477.4C0 496.5 15.52 512 34.66 512h301.7C326.3 498.6 320 482.1 320 464V336z"
            fill="currentColor"
          />
        </svg>
        Change Password
      </a>
    </div>
    <ul
      aria-label="breadcrumbs"
    >
      <li
        aria-label="breadcrumb"
      >
        Home @ /
      </li>
      <li
        aria-label="breadcrumb"
      >
        Current User @ /user
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<UserPage> when the user has successfully loaded should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <ul
      aria-label="navigation"
    >
      <li
        aria-label="navigation-item"
      >
        Nav Item @ /nav-item
      </li>
      <li>
        Dropdown
        <ul>
          <li
            aria-label="navigation-item"
          >
            Dropdown Item @ /dropdown-item
          </li>
        </ul>
      </li>
    </ul>
    <h1>
      Current User
    </h1>
    <div
      class="relative"
    >
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            Alan Bradley
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Email
          </dt>
          <dd
            class="data-list-value"
          >
            alan.bradley@example.com
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Role
          </dt>
          <dd
            class="data-list-value"
          >
            User
          </dd>
        </div>
      </dl>
      <h2
        class="mb-2"
      >
        Security
      </h2>
      <a>
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-user-lock pr-1"
          data-icon="user-lock"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 640 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M592 288H576V212.7c0-41.84-30.03-80.04-71.66-84.27C456.5 123.6 416 161.1 416 208V288h-16C373.6 288 352 309.6 352 336v128c0 26.4 21.6 48 48 48h192c26.4 0 48-21.6 48-48v-128C640 309.6 618.4 288 592 288zM496 432c-17.62 0-32-14.38-32-32s14.38-32 32-32s32 14.38 32 32S513.6 432 496 432zM528 288h-64V208c0-17.62 14.38-32 32-32s32 14.38 32 32V288zM224 256c70.7 0 128-57.31 128-128S294.7 0 224 0C153.3 0 96 57.31 96 128S153.3 256 224 256zM320 336c0-8.672 1.738-16.87 4.303-24.7C308.6 306.6 291.9 304 274.7 304H173.3C77.61 304 0 381.7 0 477.4C0 496.5 15.52 512 34.66 512h301.7C326.3 498.6 320 482.1 320 464V336z"
            fill="currentColor"
          />
        </svg>
        Change Password
      </a>
    </div>
    <ul
      aria-label="breadcrumbs"
    >
      <li
        aria-label="breadcrumb"
      >
        Home @ /
      </li>
      <li
        aria-label="breadcrumb"
      >
        Current User @ /user
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<UserPage> when the user has successfully loaded when the user clicks the Change Password link should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <ul
      aria-label="navigation"
    >
      <li
        aria-label="navigation-item"
      >
        Nav Item @ /nav-item
      </li>
      <li>
        Dropdown
        <ul>
          <li
            aria-label="navigation-item"
          >
            Dropdown Item @ /dropdown-item
          </li>
        </ul>
      </li>
    </ul>
    <h1>
      Current User
    </h1>
    <div
      class="relative"
    >
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            Alan Bradley
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Email
          </dt>
          <dd
            class="data-list-value"
          >
            alan.bradley@example.com
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Role
          </dt>
          <dd
            class="data-list-value"
          >
            User
          </dd>
        </div>
      </dl>
      <h2
        class="mb-2"
      >
        Security
      </h2>
      <form
        action="#"
        class="w-full lg:w-1/2 relative"
      >
        <div
          class=""
        >
          <div
            class="form-field"
          >
            <label
              class="form-label"
              for="old_password"
            >
              Old Password
            </label>
            <input
              class="form-input"
              id="old_password"
              name="oldPassword"
              type="password"
              value=""
            />
          </div>
          <div
            class="form-field"
          >
            <label
              class="form-label"
              for="new_password"
            >
              New Password
            </label>
            <input
              class="form-input"
              id="new_password"
              name="newPassword"
              type="password"
              value=""
            />
          </div>
          <div
            class="form-field"
          >
            <label
              class="form-label"
              for="confirm_password"
            >
              Confirm Password
            </label>
            <input
              class="form-input"
              id="confirm_password"
              name="confirmPassword"
              type="password"
              value=""
            />
          </div>
        </div>
        <div
          class="gap-3 sm:grid sm:grid-cols-1 lg:grid-cols-2"
        >
          <button
            class="form-button"
            type="button"
          >
            Cancel
          </button>
          <button
            class="form-button button-info"
            type="submit"
          >
            Update Password
          </button>
        </div>
      </form>
    </div>
    <ul
      aria-label="breadcrumbs"
    >
      <li
        aria-label="breadcrumb"
      >
        Home @ /
      </li>
      <li
        aria-label="breadcrumb"
      >
        Current User @ /user
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`<UserPage> when the user is loading should match the snapshot 1`] = `
<DocumentFragment>
  <div
    class="mock-page"
  >
    <ul
      aria-label="navigation"
    >
      <li
        aria-label="navigation-item"
      >
        Nav Item @ /nav-item
      </li>
      <li>
        Dropdown
        <ul>
          <li
            aria-label="navigation-item"
          >
            Dropdown Item @ /dropdown-item
          </li>
        </ul>
      </li>
    </ul>
    <h1>
      Current User
    </h1>
    <div
      class="relative"
    >
      <div
        class="form-loading-overlay absolute grid h-full place-content-center w-full"
      >
        <div
          class="inline-block text-center"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-user h-10 w-10"
            data-icon="user"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M224 256c70.7 0 128-57.31 128-128s-57.3-128-128-128C153.3 0 96 57.31 96 128S153.3 256 224 256zM274.7 304H173.3C77.61 304 0 381.6 0 477.3c0 19.14 15.52 34.67 34.66 34.67h378.7C432.5 512 448 496.5 448 477.3C448 381.6 370.4 304 274.7 304z"
              fill="currentColor"
            />
          </svg>
          <br />
          Loading User...
        </div>
      </div>
      <dl
        class="data-list"
      >
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Name
          </dt>
          <dd
            class="data-list-value"
          >
            <span
              class="text-muted"
            >
              (none)
            </span>
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Email
          </dt>
          <dd
            class="data-list-value"
          >
            <span
              class="text-muted"
            >
              (none)
            </span>
          </dd>
        </div>
        <div
          class="data-list-item"
        >
          <dt
            class="data-list-label"
          >
            Role
          </dt>
          <dd
            class="data-list-value"
          >
            <span
              class="text-muted"
            >
              (none)
            </span>
          </dd>
        </div>
      </dl>
      <h2
        class="mb-2"
      >
        Security
      </h2>
      Loading...
    </div>
    <ul
      aria-label="breadcrumbs"
    >
      <li
        aria-label="breadcrumb"
      >
        Home @ /
      </li>
      <li
        aria-label="breadcrumb"
      >
        Current User @ /user
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
